# ORNL-ML-For-Chemicals-2024

./: .gitignore  README.md  conda_env.sh  cool-collin.yml  mpi4py_install.sh  pyproject.toml  requirements.txt
notebooks/: gnn.db  gnn_lm.db  gnn_optuna.py  gnn_train.ipynb  gnn_train.py  hpo_gnn.sbatch  hpo_lm.py  hpo_lm.sbatch  hpo_lm_gnn.sbatch  lm.db  lm_gnn_optuna.py  lm_gnn_train.ipynb  lm_gnn_train.py  lm_train.ipynb
notebooks/model_configs/gnn/: best.json  qm9.json
notebooks/model_configs/gnn_lm/: best.json  qm9.json
src/data/: download_customqm9.py  download_models.py  make_clsdataset.py  run_model.py  targets_dataset.py  token_splits.py  uncharacterized_csv.py
src/models/hydragnn/: run_training.py
src/models/hydragnn/preprocess/: compositional_data_splitting.py  load_data.py
src/models/hydragnn/train/: train_validate_test.py
src/models/mol_lms/: affinity_scoring.py  discriminator.py  gan.py  generator.py  lm_test.py  molecule_scoring.py  population.py  token_splits.py  training_lm.py
src/models/mol_lms/config/: default.json
