[tool.poetry]
name = "collin-multimodal"
version = "0.1.0"
description = "Language Models + Graph Neural Networks for modeling molecules"
authors = ["Collin Francel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
ase = "^3.23.0"
transformers = "^4.41.2"
networkx = "^3.3"
tqdm = "^4.66.4"
ipykernel = "^6.29.4"
tensorboard = "^2.17.0"
rdkit = "^2023.9.6"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
